<resources>
    <string name="app_name">Suitmedia-KM-test</string>
    <string name="photoProfile">photoProfileFirst</string>
    <string name="Chekckusername">Check</string>
    <string name="Palindrome">Palindrome</string>
    <string name="Name">Name</string>
    <string name="Next">Next</string>
    <string name="buttonBacktoLogin">buttonBacktoLogin</string>
    <string name="SecondScreen">Second Screen</string>
    <string name="chooseUser">choose a user</string>
    <string name="Selectedusername">Selected user name</string>
    <string name="welcome">Welcome</string>
    <string name="usertitle">User</string>
    <string name="backtosecondpage">backtosecondpage</string>
    <string name="thirdscreen">Third Screen</string>
    <string name="nodata">No data</string>
</resources>